[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-fusion"
version = "3.9.11"
description = "SCPN Fusion Core - Advanced Plasma Physics & Control Suite"
authors = [
    {name = "Miroslav Sotek"},
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta",
]
readme = "README.md"
dependencies = [
    "click>=8.1,<9",
    "numpy>=1.24,<2.0",
    "matplotlib>=3.5,<4",
    "scipy>=1.10,<2",
    "pydantic>=2.0,<3",
    "pandas>=1.5,<4",
    "requests>=2.31,<3",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/anulum/scpn-fusion-core"
Documentation = "https://anulum.github.io/scpn-fusion-core/"
Repository = "https://github.com/anulum/scpn-fusion-core"
"Bug Tracker" = "https://github.com/anulum/scpn-fusion-core/issues"

[project.optional-dependencies]
ui = [
    "streamlit",
]
ml = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
rl = [
    "gymnasium>=1.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.8",
    "bandit>=1.7",
    "pre-commit>=3.0",
    "types-psutil>=7.2.2.20260518",
]
fuzz = [
    "atheris>=2.3",
]
rust = [
    "maturin>=1.7,<2.0",
]
snn = []  # pure-numpy LIF+NEF engine, no external deps
studio = [
    "scpn-studio-platform>=0.9,<0.11",
]
benchmark = [
    "freegs>=0.6",
]
full-physics = [
    "freegs>=0.6",
    "omas>=0.70",
]
gpu = [
    "jax[cuda12]>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
]
mpi = [
    "mpi4py>=4.1",
]
full = [
    "streamlit",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "cupy-cuda12x>=13.6,<14.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
    "gymnasium>=1.0.0",
    "freegs>=0.6",
    "mpi4py>=4.1",
    "omas>=0.70",
    "maturin>=1.7,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src", "validation" = "validation", "weights" = "weights"}

# Discover every scpn_fusion subpackage (core/, control/, io/, …) plus the
# validation package; the previous explicit ``packages`` list named only the
# top-level packages, so the built wheel shipped scpn_fusion/*.py but none of
# the subpackages, leaving it non-importable for downstream consumers.
[tool.setuptools.packages.find]
where = ["src", "."]
include = ["scpn_fusion*", "validation*", "weights"]

# Ship the reference datasets the package loads at import/runtime (e.g. the IPB98
# scaling coefficients read at module import in core/scaling_laws) so the wheel is
# usable, not just importable.
[tool.setuptools.package-data]
validation = [
    "**/*.json",
    "**/*.npz",
    "**/*.geqdsk",
    "**/*.eqdsk",
    "**/*.csv",
]
# Ship only the small runtime surrogate weights the library loads by default (~12 MB
# total). Large training-only checkpoints — the 302 MB legacy ``fno_turbulence_jax.npz``
# (opt-in via SCPN_ENABLE_LEGACY_FNO) and the variant/augmented artifacts — are
# deliberately excluded to keep the wheel within a sane distribution size.
weights = [
    "neural_transport_qlknn.npz",
    "neural_transport_qlknn.metrics.json",
    "neural_equilibrium_sparc.npz",
    "neural_equilibrium_iter_v1.npz",
    "pretrained_mlp_itpa.npz",
    "pretrained_fno_eurofusion_jet.npz",
    "pretrained_surrogates_manifest.json",
]
scpn_fusion = ["py.typed"]

# Exclude large training-only datasets from the wheel. The 157 MB TGLF training
# corpus is consumed solely by tools/generate_tglf_dataset.py (a source-tree
# training utility) and is never loaded by the installed library, so shipping it
# would push the wheel past the PyPI size limit for no runtime benefit.
[tool.setuptools.exclude-package-data]
validation = ["reference_data/tglf_training_data.npz"]

[project.scripts]
scpn-fusion = "scpn_fusion.cli:main"
scpn-dashboard = "scpn_fusion.ui.dashboard_launcher:main"
scpn-emit-studio-manifest = "scpn_fusion.studio.federation:main"

[tool.mypy]
strict = true
ignore_missing_imports = false

# Strict defaults apply to every mypy invocation. The file cohort below is the
# currently gated typed surface and is expanded incrementally as modules are
# brought to strict-clean status.
files = [
    # Top-level package entrypoints
    "src/scpn_fusion/__init__.py",
    "src/scpn_fusion/cli.py",
    "src/scpn_fusion/_data_paths.py",
    # scpn/ (existing)
    "src/scpn_fusion/scpn/contracts.py",
    "src/scpn_fusion/scpn/controller.py",
    "src/scpn_fusion/scpn/controller_backend_mixin.py",
    "src/scpn_fusion/scpn/controller_features_mixin.py",
    "src/scpn_fusion/scpn/structure.py",
    "src/scpn_fusion/scpn/artifact.py",
    "src/scpn_fusion/scpn/artifact_codec.py",
    "src/scpn_fusion/scpn/artifact_schema.py",
    "src/scpn_fusion/scpn/artifact_validation.py",
    "src/scpn_fusion/scpn/compiler.py",
    "src/scpn_fusion/scpn/controller_runtime_backend.py",
    "src/scpn_fusion/scpn/safety_interlocks.py",
    "src/scpn_fusion/scpn/__init__.py",
    # io/
    "src/scpn_fusion/io/__init__.py",
    "src/scpn_fusion/io/_tokamak_archive_shots.py",
    "src/scpn_fusion/io/imas_connector.py",
    "src/scpn_fusion/io/imas_connector_common.py",
    "src/scpn_fusion/io/imas_connector_digital_twin.py",
    "src/scpn_fusion/io/imas_connector_equilibrium.py",
    "src/scpn_fusion/io/imas_connector_omas.py",
    "src/scpn_fusion/io/imas_connector_storage.py",
    "src/scpn_fusion/io/imas_connector_transport.py",
    "src/scpn_fusion/io/imas_history_payloads.py",
    "src/scpn_fusion/io/logging_config.py",
    "src/scpn_fusion/io/mast_ingestor.py",
    "src/scpn_fusion/io/safe_loaders.py",
    "src/scpn_fusion/io/tokamak_live_payload.py",
    "src/scpn_fusion/io/tokamak_archive.py",
    "src/scpn_fusion/io/tokamak_archive_profiles.py",
    "src/scpn_fusion/io/tokamak_disruption_archive.py",
    "src/scpn_fusion/io/tokamak_synthetic_archive.py",
    # diagnostics/
    "src/scpn_fusion/diagnostics/__init__.py",
    "src/scpn_fusion/diagnostics/forward.py",
    "src/scpn_fusion/diagnostics/run_diagnostics.py",
    "src/scpn_fusion/diagnostics/synthetic_sensors.py",
    "src/scpn_fusion/diagnostics/tomography.py",
    # hpc/
    "src/scpn_fusion/hpc/__init__.py",
    "src/scpn_fusion/hpc/hpc_bridge.py",
    "tests/test_hpc_bridge.py",
    "tests/test_blanket_neutronics.py",
    "tests/test_turbulence_oracle.py",
    "tests/test_faraday_recovery.py",
    "tests/test_sandpile_fusion_reactor.py",
    "tests/test_global_design_scanner.py",
    "tests/test_divertor_thermal_sim.py",
    "tests/test_pwi_erosion.py",
    "tests/test_mhd_sawtooth.py",
    "tests/test_hall_mhd_discovery.py",
    "tests/test_controller_tuning.py",
    "tests/test_nuclear_wall_interaction.py",
    "tests/test_fusion_control_room.py",
    "tests/test_fusion_ignition_sim.py",
    "tests/test_structure.py",
    "tests/test_tokamak_digital_twin.py",
    "tests/test_tokamak_flight_sim.py",
    "tests/test_geometry_3d.py",
    # ui/
    "src/scpn_fusion/ui/__init__.py",
    "src/scpn_fusion/ui/app.py",
    "src/scpn_fusion/ui/dashboard_generator.py",
    "src/scpn_fusion/ui/dashboard_launcher.py",
    "src/scpn_fusion/ui/security_headers.py",
    # nuclear/
    "src/scpn_fusion/nuclear/__init__.py",
    "src/scpn_fusion/nuclear/blanket_neutronics.py",
    "src/scpn_fusion/nuclear/nuclear_wall_interaction.py",
    "src/scpn_fusion/nuclear/pwi_erosion.py",
    "src/scpn_fusion/nuclear/temhd_peltier.py",
    # core/
    "src/scpn_fusion/core/eqdsk.py",
    "src/scpn_fusion/core/stability_mhd.py",
    "src/scpn_fusion/core/integrated_transport_solver.py",
    "src/scpn_fusion/core/integrated_transport_solver_contracts.py",
    "src/scpn_fusion/core/_integrated_transport_solver_model_common.py",
    "src/scpn_fusion/core/tglf_interface.py",
    "src/scpn_fusion/core/tglf_validation_runtime.py",
    "src/scpn_fusion/core/_integrated_transport_solver_base.py",
    "src/scpn_fusion/core/_integrated_transport_solver_init.py",
    "src/scpn_fusion/core/_integrated_transport_solver_model_backend.py",
    "src/scpn_fusion/core/_integrated_transport_solver_model_pedestal.py",
    "src/scpn_fusion/core/integrated_transport_solver_coupling.py",
    "src/scpn_fusion/core/integrated_transport_solver_model.py",
    "src/scpn_fusion/core/integrated_transport_solver_runtime.py",
    "src/scpn_fusion/core/integrated_transport_solver_runtime_physics.py",
    "src/scpn_fusion/core/integrated_transport_solver_runtime_utils.py",
    "src/scpn_fusion/core/gk_nonlinear.py",
    "src/scpn_fusion/core/_gk_nonlinear_time.py",
    "src/scpn_fusion/core/_gk_nonlinear_operators.py",
    "src/scpn_fusion/core/_gk_nonlinear_setup.py",
    "src/scpn_fusion/core/_gk_nonlinear_base.py",
    "src/scpn_fusion/core/gk_qualikiz.py",
    "src/scpn_fusion/core/neural_transport.py",
    "src/scpn_fusion/core/quantum_bridge.py",
    "src/scpn_fusion/core/gk_scheduler.py",
    "src/scpn_fusion/core/gk_interface.py",
    "src/scpn_fusion/core/gk_quasilinear.py",
    "src/scpn_fusion/core/gk_gs2.py",
    "src/scpn_fusion/core/gk_cgyro.py",
    "src/scpn_fusion/core/gk_corrector.py",
    "src/scpn_fusion/core/gk_eigenvalue.py",
    "src/scpn_fusion/core/gk_species.py",
    "src/scpn_fusion/core/gk_geometry.py",
    "src/scpn_fusion/core/gk_verification_report.py",
    "src/scpn_fusion/core/gk_ood_detector.py",
    "src/scpn_fusion/core/gk_gene.py",
    "src/scpn_fusion/core/gk_maxwell_evolution.py",
    "src/scpn_fusion/core/gk_online_learner.py",
    "src/scpn_fusion/core/gk_tglf.py",
    "src/scpn_fusion/core/gk_tglf_native.py",
    "src/scpn_fusion/core/integrated_transport_solver_adaptive.py",
    "src/scpn_fusion/control/digital_twin_ingest.py",
    "src/scpn_fusion/control/disruption_checkpoint_policy.py",
    "src/scpn_fusion/control/rmf_phase_lock.py",
    "src/scpn_fusion/control/controller_tuning.py",
    "src/scpn_fusion/control/gym_tokamak_env.py",
    "src/scpn_fusion/control/jax_traceable_runtime.py",
    "src/scpn_fusion/control/fusion_control_room.py",
    "src/scpn_fusion/control/federated_disruption.py",
    "src/scpn_fusion/control/tokamak_digital_twin.py",
    "src/scpn_fusion/control/neuro_cybernetic_controller.py",
    "src/scpn_fusion/control/analytic_solver.py",
    "src/scpn_fusion/control/fusion_optimal_control.py",
    "src/scpn_fusion/control/nmpc_controller.py",
    "src/scpn_fusion/control/hil_demo_runner.py",
    "src/scpn_fusion/control/fusion_sota_mpc.py",
    "src/scpn_fusion/control/disruption_predictor.py",
    "src/scpn_fusion/control/realtime_efit.py",
    "src/scpn_fusion/control/mu_synthesis.py",
    "src/scpn_fusion/control/advanced_soc_fusion_learning.py",
    "src/scpn_fusion/control/disruption_risk_runtime.py",
    "src/scpn_fusion/control/_free_boundary_tracking_base.py",
    "src/scpn_fusion/control/_free_boundary_tracking_config.py",
    "src/scpn_fusion/control/_free_boundary_tracking_control.py",
    "src/scpn_fusion/control/_free_boundary_tracking_runtime.py",
    "src/scpn_fusion/control/_free_boundary_tracking_shot.py",
    "src/scpn_fusion/control/free_boundary_tracking.py",
    "src/scpn_fusion/control/_free_boundary_simulation.py",
    "src/scpn_fusion/control/director_interface.py",
    "src/scpn_fusion/control/spi_mitigation.py",
    "src/scpn_fusion/control/tokamak_flight_sim.py",
    "src/scpn_fusion/control/torax_hybrid_loop.py",
    "src/scpn_fusion/core/hpc_bridge.py",
    "src/scpn_fusion/core/_surrogate_utils.py",
    "src/scpn_fusion/core/neural_transport_math.py",
    "src/scpn_fusion/core/runaway_electrons.py",
    "src/scpn_fusion/core/mrti.py",
    "src/scpn_fusion/core/vessel_model.py",
    "src/scpn_fusion/core/vmec_lite.py",
    "src/scpn_fusion/core/ntm_dynamics.py",
    "src/scpn_fusion/core/locked_mode.py",
    "src/scpn_fusion/core/_neural_transport_types.py",
    "src/scpn_fusion/core/_neural_transport_analytic.py",
    "src/scpn_fusion/core/_neural_transport_runtime.py",
    "src/scpn_fusion/core/_gk_nonlinear_types.py",
    "src/scpn_fusion/core/_multi_compat.py",
    "src/scpn_fusion/core/_tglf_interface_benchmark.py",
    "src/scpn_fusion/core/_tglf_interface_reference.py",
    "src/scpn_fusion/core/_tglf_interface_runtime.py",
    "src/scpn_fusion/core/_tglf_interface_types.py",
    "src/scpn_fusion/core/_validators.py",
    "src/scpn_fusion/core/amr_patch.py",
    "src/scpn_fusion/core/checkpoint.py",
    "src/scpn_fusion/core/config_schema.py",
    "src/scpn_fusion/core/current_diffusion.py",
    "src/scpn_fusion/core/elm_model.py",
    "src/scpn_fusion/core/eped_pedestal.py",
    "src/scpn_fusion/core/heating_neutronics_contracts.py",
    "src/scpn_fusion/core/imas_adapter.py",
    "src/scpn_fusion/core/marfe.py",
    "src/scpn_fusion/core/plasma_startup.py",
    "src/scpn_fusion/core/public_frc_reference.py",
    "src/scpn_fusion/core/scaling_laws.py",
    "src/scpn_fusion/core/tokamak_config.py",
    "src/scpn_fusion/core/sol_model.py",
    "src/scpn_fusion/core/pedestal.py",
    "src/scpn_fusion/core/sawtooth.py",
    "src/scpn_fusion/core/neoclassical.py",
    "src/scpn_fusion/core/current_drive.py",
    "src/scpn_fusion/core/orbit_following.py",
    "src/scpn_fusion/core/tearing_mode_coupling.py",
    "src/scpn_fusion/core/blob_transport.py",
    "src/scpn_fusion/core/ballooning_solver.py",
    "src/scpn_fusion/core/alfven_eigenmodes.py",
    "src/scpn_fusion/core/pellet_injection.py",
    "src/scpn_fusion/core/lh_transition.py",
    "src/scpn_fusion/core/rf_heating.py",
    "src/scpn_fusion/core/momentum_transport.py",
    "src/scpn_fusion/core/faraday_recovery.py",
    "src/scpn_fusion/core/uncertainty.py",
    "src/scpn_fusion/core/direct_energy_conversion.py",
    "src/scpn_fusion/core/plasma_wall_interaction.py",
    "src/scpn_fusion/core/state_space.py",
    "src/scpn_fusion/core/disruption_structural_response.py",
    "src/scpn_fusion/core/hts_quench.py",
    "src/scpn_fusion/core/fieldline_3d.py",
    "src/scpn_fusion/core/kinetic_efit.py",
    "src/scpn_fusion/core/geometry_3d.py",
    "src/scpn_fusion/core/equilibrium_3d.py",
    "src/scpn_fusion/core/compact_reactor_optimizer.py",
    "src/scpn_fusion/core/frc_rigid_rotor.py",
    "src/scpn_fusion/core/fusion_ignition_sim.py",
    "src/scpn_fusion/core/disruption_sequence.py",
    "src/scpn_fusion/core/fno_training_multi_regime.py",
    "src/scpn_fusion/core/fno_jax_training.py",
    "src/scpn_fusion/core/fusion_kernel_numerics.py",
    "src/scpn_fusion/core/fusion_kernel_coilset_config.py",
    "src/scpn_fusion/core/fusion_kernel_newton_runtime.py",
    "src/scpn_fusion/core/fusion_kernel_free_boundary_mixin.py",
    "src/scpn_fusion/core/fusion_kernel.py",
    "src/scpn_fusion/core/fusion_kernel_free_boundary.py",
    "src/scpn_fusion/core/_rust_compat.py",
    "src/scpn_fusion/core/fusion_kernel_solver_runtime.py",
    "src/scpn_fusion/core/fusion_kernel_iterative_solver.py",
    "src/scpn_fusion/core/multigrid_solve.py",
    "src/scpn_fusion/core/fusion_kernel_newton_solver.py",
    "src/scpn_fusion/core/pulsed_compression.py",
    "src/scpn_fusion/core/stability_mhd_extended.py",
    "src/scpn_fusion/core/jax_gk_solver.py",
    "src/scpn_fusion/core/neural_equilibrium_training.py",
    "src/scpn_fusion/core/jax_equilibrium_solver.py",
    "src/scpn_fusion/core/jax_gk_nonlinear.py",
    "src/scpn_fusion/core/pretrained_surrogates.py",
    "src/scpn_fusion/core/gs_transport_surrogate_training.py",
    "src/scpn_fusion/core/jax_neural_equilibrium.py",
    "src/scpn_fusion/core/quasi_3d_contracts.py",
    "src/scpn_fusion/core/heat_ml_shadow_surrogate.py",
    "src/scpn_fusion/core/fno_training.py",
    "src/scpn_fusion/core/uncertainty_full_chain.py",
    "src/scpn_fusion/core/gyro_swin_surrogate.py",
    "src/scpn_fusion/core/sandpile_fusion_reactor.py",
    "src/scpn_fusion/core/stability_analyzer.py",
    "src/scpn_fusion/core/jax_gs_solver.py",
    "src/scpn_fusion/core/turbulence_oracle.py",
    "src/scpn_fusion/core/neural_turbulence.py",
    "src/scpn_fusion/core/neural_equilibrium.py",
    "src/scpn_fusion/core/jax_solvers.py",
    "src/scpn_fusion/core/gyrokinetic_transport.py",
    "src/scpn_fusion/core/hall_mhd_discovery.py",
    "src/scpn_fusion/core/jax_transport_solver.py",
    "src/scpn_fusion/core/integrated_scenario.py",
    "src/scpn_fusion/core/impurity_transport.py",
    "src/scpn_fusion/core/__init__.py",
    "src/scpn_fusion/core/force_balance.py",
    "src/scpn_fusion/core/fno_turbulence_suppressor.py",
    "src/scpn_fusion/core/wdm_engine.py",
    "src/scpn_fusion/core/global_design_scanner.py",
    "src/scpn_fusion/core/tglf_surrogate_bridge.py",
    "src/scpn_fusion/core/gk_domain_decomposition.py",
    "src/scpn_fusion/core/gpu_runtime.py",
    "src/scpn_fusion/core/stellarator_geometry.py",
    "src/scpn_fusion/core/tilt_mode_frc.py",
    "src/scpn_fusion/core/hall_mhd_pulsed.py",
    "src/scpn_fusion/core/neural_equilibrium_kernel.py",
    # control/
    "src/scpn_fusion/control/halo_re_physics.py",
    "src/scpn_fusion/control/h_infinity_controller.py",
    "src/scpn_fusion/control/nengo_snn_wrapper.py",
    "src/scpn_fusion/control/__init__.py",
    "src/scpn_fusion/control/_free_boundary_control_geometry.py",
    "src/scpn_fusion/control/_free_boundary_estimator.py",
    "src/scpn_fusion/control/_free_boundary_plotting.py",
    "src/scpn_fusion/control/_free_boundary_safety_supervisor.py",
    "src/scpn_fusion/control/_free_boundary_simulation_arrays.py",
    "src/scpn_fusion/control/_free_boundary_simulation_summary.py",
    "src/scpn_fusion/control/_free_boundary_supervisory_types.py",
    "src/scpn_fusion/control/_free_boundary_tracking_types.py",
    "src/scpn_fusion/control/codac_interface.py",
    "src/scpn_fusion/control/fault_tolerant_control.py",
    "src/scpn_fusion/control/flight_sim_controllers.py",
    "src/scpn_fusion/control/gain_scheduled_controller.py",
    "src/scpn_fusion/control/hil_harness.py",
    "src/scpn_fusion/control/replay_pipeline.py",
    "src/scpn_fusion/control/free_boundary_supervisory_control.py",
    "src/scpn_fusion/control/stellarator_control_contracts.py",
    # Sprint 4 mypy expansion
    "src/scpn_fusion/control/fokker_planck_re.py",
    "src/scpn_fusion/control/spi_ablation.py",
    "src/scpn_fusion/control/fusion_nmpc_jax.py",
    "src/scpn_fusion/control/disruption_contract_primitives.py",
    "src/scpn_fusion/control/disruption_contracts.py",
    "src/scpn_fusion/control/disruption_replay_contracts.py",
    "src/scpn_fusion/control/burn_controller.py",
    "src/scpn_fusion/control/density_controller.py",
    "src/scpn_fusion/control/detachment_controller.py",
    "src/scpn_fusion/control/fueling_mode.py",
    "src/scpn_fusion/control/sliding_mode_vertical.py",
    "src/scpn_fusion/control/state_estimator.py",
    "src/scpn_fusion/control/volt_second_manager.py",
    "src/scpn_fusion/control/runaway_electron_model.py",
    "src/scpn_fusion/control/rust_flight_sim_wrapper.py",
    "src/scpn_fusion/control/rwm_feedback.py",
    "src/scpn_fusion/control/rzip_model.py",
    "src/scpn_fusion/control/safe_rl_controller.py",
    "src/scpn_fusion/control/scenario_scheduler.py",
    "src/scpn_fusion/control/shape_controller.py",
    "src/scpn_fusion/core/mhd_sawtooth.py",
    "src/scpn_fusion/core/divertor_thermal_sim.py",
    # Phase dynamics strict cohort
    "src/scpn_fusion/phase/__init__.py",
    "src/scpn_fusion/phase/adaptive_knm.py",
    "src/scpn_fusion/phase/gk_upde_bridge.py",
    "src/scpn_fusion/phase/knm.py",
    "src/scpn_fusion/phase/kuramoto.py",
    "src/scpn_fusion/phase/lyapunov_guard.py",
    "src/scpn_fusion/phase/plasma_knm.py",
    "src/scpn_fusion/phase/realtime_monitor.py",
    "src/scpn_fusion/phase/upde.py",
    "src/scpn_fusion/phase/ws_phase_stream.py",
    # Engineering strict cohort
    "src/scpn_fusion/engineering/__init__.py",
    "src/scpn_fusion/engineering/balance_of_plant.py",
    "src/scpn_fusion/engineering/cad_raytrace.py",
    "src/scpn_fusion/engineering/thermal_hydraulics.py",
    # Runtime compatibility strict cohort
    "src/scpn_fusion/exceptions.py",
    "src/scpn_fusion/fallback_telemetry.py",
    "src/scpn_fusion/neurocore_compat.py",
    # studio/ (SCPN-STUDIO federation surface, schema A)
    "src/scpn_fusion/studio/__init__.py",
    "src/scpn_fusion/studio/exactness.py",
    "src/scpn_fusion/studio/federation.py",
    "src/scpn_fusion/studio/manifest.py",
    "src/scpn_fusion/studio/verbs.py",
]

[[tool.mypy.overrides]]
module = ["sc_neurocore", "sc_neurocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# torch is an optional runtime backend, absent from the CI type-check environment.
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scpn_fusion_rs"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["MDSplus", "MDSplus.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["omas", "omas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scpn-studio-platform is the optional [studio] federation SDK, absent from the
# base CI type-check environment (only the studio-conformance job installs it).
module = ["scpn_studio_platform", "scpn_studio_platform.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "scpn_fusion.control.h_infinity_controller",
    "scpn_fusion.control.fokker_planck_re",
    "scpn_fusion.control.spi_ablation",
    "scpn_fusion.control.fusion_nmpc_jax",
    "scpn_fusion.core.mhd_sawtooth",
    "scpn_fusion.core.divertor_thermal_sim",
]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-p no:pytest_nengo --strict-markers"
markers = [
    "slow: marks long-running regression tests",
    "experimental: marks experimental/research-only validation lanes",
    "stress: marks stress tests (long-running, main-push only)",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*oneOf.*[dD]eprecated.*:Warning",
    "default::UserWarning",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks", "validation/reference_data", "weights"]

[tool.ruff.lint]
# NumPy-convention docstring (`D`) rules are enforced separately on the strict
# mypy cohort via `tools/run_ruff_docstrings.py` (wired into the preflight gate),
# so the cohort is the single source of truth for both typing and docstrings.
# They are intentionally kept out of the global `select` until every src module
# has graduated into the cohort.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
  "E402",
  "E741",
  "I001",
  "UP006", "UP007", "UP015", "UP031", "UP035", "UP037", "UP038", "UP045",
  "F841",
  "SIM102", "SIM105", "SIM108",
  "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.ruff.lint.per-file-ignores]
# Re-exports
"__init__.py" = ["F401"]
# Notebooks: re-exports + cell redefinitions
"examples/*.ipynb" = ["F401", "F811"]
# Conditional imports in try/except blocks (optional dependencies)
"src/scpn_fusion/control/director_interface.py" = ["F401"]
"src/scpn_fusion/control/fusion_nmpc_jax.py" = ["F401"]
"src/scpn_fusion/core/_rust_compat.py" = ["F401"]
"src/scpn_fusion/core/fno_turbulence_suppressor.py" = ["F401"]
"src/scpn_fusion/core/force_balance.py" = ["F401"]
"src/scpn_fusion/core/current_diffusion.py" = ["F841"]
"src/scpn_fusion/core/global_design_scanner.py" = ["F401"]
"src/scpn_fusion/core/wdm_engine.py" = ["F401"]
# Forward reference to TransportSolver (circular import guard)
"src/scpn_fusion/core/integrated_transport_solver_adaptive.py" = ["F821"]
# Conditional imports in tests/tools/validation
"tests/test_rust_python_parity.py" = ["F401"]
"tests/test_fno_training.py" = ["F401"]
"tests/test_gpu_jax_backend.py" = ["F401"]
"tools/generate_benchmark_plots.py" = ["F401"]
"validation/benchmark_vs_freegs.py" = ["F401"]

[tool.bandit]
# B101 (assert) and B311 (non-crypto random) are intentional throughout the
# scientific code. B404/B603 cover importing and calling subprocess with a list
# argv and shell disabled — the deliberate pattern for orchestrating external
# physics codes (GENE/GS2/CGYRO/TGLF), native builds, git, and the dashboard;
# the genuinely dangerous shell=True variant is still caught by B602.
skips = ["B101", "B311", "B404", "B603"]
exclude_dirs = ["tests", "notebooks", "validation"]

[tool.coverage.run]
source = ["scpn_fusion"]
omit = [
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except ImportError",
    "if HAS_JAX",
    "if HAS_FREEGS",
    "if HAS_OMAS",
    # Structurally unexecutable stub bodies (Protocol/abstract/overload declarations).
    "^\\s*\\.\\.\\.\\s*$",
    "@(typing\\.)?overload",
    "@(abc\\.)?abstractmethod",
]
