[workspace]
members = [
    "crates/fusion-types",
    "crates/fusion-math",
    "crates/fusion-core",
    "crates/fusion-physics",
    "crates/fusion-nuclear",
    "crates/fusion-engineering",
    "crates/fusion-control",
    "crates/fusion-diagnostics",
    "crates/fusion-ml",
    "crates/fusion-python",
]
resolver = "2"

[workspace.package]
authors = ["Miroslav Sotek", "Michal Reiprich"]
license = "AGPL-3.0-or-later"
edition = "2021"

[workspace.dependencies]
ndarray = "0.16"
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.2"
num-complex = "0.4"
approx = "0.5"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rand_distr = "0.4"
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
criterion = { version = "0.5" }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
