# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
name = "fusion-control"
version = "0.1.0"
edition = "2021"
description = "SCPN Fusion Core - Control systems (PID, MPC, SNN, RL)"

[dependencies]
fusion-types = { path = "../fusion-types" }
fusion-math = { path = "../fusion-math" }
fusion-core = { path = "../fusion-core" }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
