# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
name = "fusion-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SCPN Fusion Core - Grad-Shafranov kernel and equilibrium solver"

[features]
default = []
mpi-domain = []

[dependencies]
fusion-types = { path = "../fusion-types" }
fusion-math = { path = "../fusion-math" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "inverse_bench"
harness = false

[[bench]]
name = "picard_bench"
harness = false

[[bench]]
name = "vacuum_bench"
harness = false

[[bench]]
name = "transport_bench"
harness = false

[[bench]]
name = "source_bench"
harness = false

[[bench]]
name = "current_diffusion_nonadiabatic_bench"
harness = false
