# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
name = "fusion-gpu"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated GS solver via wgpu compute shaders"
license = "AGPL-3.0-or-later"

[dependencies]
fusion-types = { path = "../fusion-types" }
fusion-math = { path = "../fusion-math" }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"

[dev-dependencies]
ndarray = "0.16"
criterion = { workspace = true }

[[bench]]
name = "gpu_sor_bench"
harness = false
