[package]
name = "fusion-math"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SCPN Fusion Core - Mathematical primitives"

[dependencies]
fusion-types = { path = "../fusion-types" }
ndarray = { workspace = true }
rayon = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "sor_bench"
harness = false
