# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
name = "fusion-math"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SCPN Fusion Core - Mathematical primitives"

[dependencies]
fusion-types = { path = "../fusion-types" }
ndarray = { workspace = true }
rayon = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "sor_bench"
harness = false

[[bench]]
name = "gmres_bench"
harness = false

[[bench]]
name = "multigrid_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false
