# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
name = "fusion-ml"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SCPN Fusion Core - ML models (neural equilibrium, disruption predictor)"

[dependencies]
fusion-types = { path = "../fusion-types" }
fusion-math = { path = "../fusion-math" }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
ndarray-npy = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "neural_transport_bench"
harness = false

[[bin]]
name = "mast_snn_validation"
path = "src/bin/mast_snn_validation.rs"
