[package]
authors = ["Miroslav Sotek", "Michal Reiprich"]
license = "AGPL-3.0-or-later"
name = "fusion-physics"
version = "0.1.0"
edition = "2021"
description = "SCPN Fusion Core - Standalone physics modules"

[dependencies]
fusion-types = { path = "../fusion-types" }
fusion-math = { path = "../fusion-math" }
ndarray = { workspace = true }
rayon = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
ndarray-npy = { workspace = true }
