# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — Native Rust Polyglot GS Solver

[package]
name = "fusion-polyglot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fusion_polyglot"
path = "src/lib.rs"

[[bin]]
name = "gs_picard_csv"
path = "src/bin/gs_picard_csv.rs"
