# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scpn-fusion-rs"
version = "4.0.0"
description = "SCPN Fusion Core - Rust-accelerated plasma physics"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
