# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Fusion Core — source/config header compliance
[package]
authors = ["Miroslav Sotek"]
license = "AGPL-3.0-or-later"
name = "fusion-types"
version = "0.1.0"
edition = "2021"
description = "SCPN Fusion Core - Type definitions and configuration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
